v1.7.0-RC1